--- a/package.json
+++ b/package.json
@@ -4,57 +4,48 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
     "dev": "tsc-watch --onSuccess \"node ./dist/index.js\"",
     "build": "tsc",
-    "postinstall": "npm run build",
-    "test": "cross-env TS_NODE_FILES=true mocha --exit --require ts-node/register --colors test/**/*.ts"
+    "postinstall": "npm run build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/chai": "4.2.11",
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/node": "^17.0.1",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^16.11.12",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
-    "chai": "4.2.0",
-    "chai-as-promised": "7.1.1",
-    "chai-spies": "1.0.0",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "cross-env": "7.0.2",
-    "dotenv": "^10.0.0",
-    "eslint": "^8.5.0",
+    "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "express": "^4.17.2",
-    "helmet": "^4.6.0",
-    "i": "^0.3.7",
-    "mocha": "8.0.1",
-    "module-alias": "^2.2.2",
-    "mongoose": "^6.1.2",
-    "morgan": "^1.10.0",
-    "npm": "^8.3.0",
-    "nyc": "15.1.0",
     "prettier": "^2.5.1",
-    "ts-node": "8.10.2",
     "tsc-watch": "^4.5.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.3"
+  },
+  "dependencies": {
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "envalid": "^7.2.2",
+    "express": "^4.17.1",
+    "helmet": "^4.6.0",
+    "joi": "^17.5.0",
+    "jsonwebtoken": "^8.5.1",
+    "module-alias": "^2.2.2",
+    "mongoose": "^6.1.1",
+    "morgan": "^1.10.0",
+    "pg-promise": "^10.11.1",
+    "xmlhttprequest": "^1.8.0"
   },
   "_moduleAliases": {
     "@/resources": "dist/resources",
     "@/utils": "dist/utils",
     "@/middleware": "dist/middleware"
-  },
-  "dependencies": {
-    "@types/mocha": "7.0.2",
-    "envalid": "^7.2.2",
-    "joi": "^17.5.0",
-    "jsonwebtoken": "^8.5.1",
-    "pg-promise": "^10.11.1"
   }
 }
